can render the image and name of each pokemon to the browser

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script defer src="js/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <section class="container"></section>
+  </body>
 </html>
